--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>info2180-lab4</title>
     <link rel="stylesheet" href="styles.css">
     <script src="app.js"></script>
+    <script src ="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
 
