--- a/index.html
+++ b/index.html
@@ -4,38 +4,43 @@
     <meta charset="utf-8">
     <title>info2180-lab4</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="app.js"></script>
-    <script src ="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   <body>
 
+    <!-- NOTE: Header Area -->
     <header>
       <div class="hContainer">
         <h1>AVENGERS CHARACTER SEARCH</h1>
       </div>
     </header>
 
+    <!-- NOTE: Search Area -->
     <section class="searchSection">
       <div class="sContainer">
         <h4>Seach by Full Name or Alias</h4>
+        <!-- NOTE: Search Form -->
         <form class="inputForm" action="#" method="post">
           <input type="text" name="Text" value="">
-          <input type="submit" name="Submit" value="Search">
+          <input type="submit" name="Submit" value="Search" id="sBtn">
         </form>
       </div>
     </section>
 
+    <!-- NOTE: Result Area -->
     <section class="resultSection">
       <div class="rContainer">
         <h2>RESULT</h2>
       </div>
     </section>
 
+    <!-- Footer  -->
     <footer>
       <div class="fContainer">
         <p>Copyright 2021@Kieran Jaggernauth</p>
       </div>
     </footer>
-
+  <!-- Loading scripts last  -->
+  <script src ="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="app.js"></script>
   </body>
 </html>
