--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <div class="sContainer">
         <h4>Seach by Full Name or Alias</h4>
         <!-- NOTE: Search Form -->
-        <form class="inputForm" action="#" method="post">
-          <input type="text" name="Text" value="">
+        <form class="inputForm" action="" method="post" onclick="return false">
+          <input type="text" name="Text" value="" id="tInput">
           <input type="submit" name="Submit" value="Search" id="sBtn">
         </form>
       </div>
@@ -28,7 +28,7 @@
 
     <!-- NOTE: Result Area -->
     <section class="resultSection">
-      <div class="rContainer">
+      <div class="rContainer" id="result">
         <h2>RESULT</h2>
       </div>
     </section>
