--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 
     <!-- NOTE: Result Area -->
     <section class="resultSection">
-      <div class="rContainer" id="result">
+      <div class="rContainer">
         <h2>RESULT</h2>
+        <div id="result"> </div>
       </div>
     </section>
 
